--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,10 +1,21 @@
+/*@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700&subset=cyrillic');*/
+
 * {
   box-sizing:border-box;
+  font-family: 'Roboto Mono', monospace;
+  transition: .3s;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 body {
-  transform: scale(0.7);
-  height: 100vh;
+  min-width: 820px;
+  /*transform: scale(0.7);
+  height: 100vh;*/
+  background-color: #FAFAFA;
 }
 
 .main {
@@ -16,29 +27,21 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  min-width: 820px;
 }
 
 .bg {
-  width: 1600px;
-  height: 1200px;
-  background-image: url(../materials/background.png);
-  background-position: center;
-}
-
-.elements {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 827px;
+  height: 1202px;
+  background-image: url(../materials/bg2.png);
 }
 
 .figures {
   width: 663px;
   height: 1061px;
-  margin-left: calc(50vw - 300px);
-  margin-top: calc(50vh - 530px);
-  /*background-image: url(../materials/bg.png);*/
+  margin-left: 10px;
   position: relative;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 .rectangle {
