--- a/stylesheets/menubar.css
+++ b/stylesheets/menubar.css
@@ -13,6 +13,7 @@
   align-items: center;
   min-width: 820px;
   font-family: 'Roboto Mono', monospace;
+  z-index: 1;
 }
 
 .logo {
@@ -26,4 +27,6 @@
 .gal, .ab {
   font-size: 24px;
   margin: 60px;
+  text-decoration: underline;
+  cursor: pointer;
 }
