--- a/stylesheets/menubar.css
+++ b/stylesheets/menubar.css
@@ -1,45 +1,45 @@
 .menubar {
-  position: absolute;
+  position: fixed;
   width: 100vw;
-  height: 60px;
+  height: 50px;
+  min-width: 1310px;
 
   background-color: white;
   box-shadow: 0 0 2px 0 rgba(155,155,155,0.50);
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
 
+.menu {
+  height: 100%;
+  width: 1440px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   min-width: 820px;
   font-family: 'Roboto Mono', monospace;
-  z-index: 1;
+
+
 }
 
 .logo {
-  font-size: 48px;
-  letter-spacing: 66.9px;
+  font-size: 36px;
+  letter-spacing: 55px;
   font-weight: bold;
-  line-height: 60px;
-  margin: 60px;
+  line-height: 50px;
+  margin: 73px;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .gal, .ab {
   font-size: 24px;
-  margin: 60px;
-  text-decoration: underline;
+  margin: 20px;
+  /*text-decoration: underline;*/
   cursor: pointer;
-}
-
-@media screen and (max-width: 1440px) {
-  .logo {
-    margin: 20px;
-    font-size: 36px;
-  }
-
-  .gal, .ab {
-    margin: 20px;
-    font-size: 18px;
-  }
-
+  font-family: 'Roboto Mono', monospace;
+  line-height: 50px;
 }
