--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -42,14 +42,14 @@
 }
 
 .malevich {
-  height: 1300px;
+  height: 1200px;
   position: relative;
 }
 
 .malevichBg {
   position: absolute;
   width: 1440px;
-  height: 900px;
+  height: 800px;
   -webkit-clip-path: polygon(0 0, 100% 55%, 100% 95%, 0% 100%);
   background-color: #FFD400;
 }
@@ -69,7 +69,7 @@
   width: 300px;
   height: 200px;
   margin-left: 658px;
-  margin-top: 76px;
+  margin-top: 60px;
   position: absolute;
   background-color: blue;
 }
@@ -81,7 +81,7 @@
   background-image: url(../materials/malevich1.jpg);
   background-size: contain;
   background-repeat: no-repeat;
-  margin-top: 136px;
+  margin-top: 87px;
   margin-left: 317px;
 }
 
@@ -147,7 +147,7 @@ h2 {
 
 .gallery {
   width: 900px;
-  height: 400px;
+  height: 350px;
   left: 270px;
   /*background-color: green;*/
   position: absolute;
@@ -199,6 +199,7 @@ h2 {
 }
 
 .chashnik {
+  /*top: 1300px;*/
   height: 1300px;
   position: relative;
 }
