--- a/stylesheets/menubar.css
+++ b/stylesheets/menubar.css
@@ -2,12 +2,12 @@
   position: fixed;
   width: 100vw;
   height: 50px;
-  min-width: 1310px;
 
   background-color: white;
   box-shadow: 0 0 2px 0 rgba(155,155,155,0.50);
 
   display: flex;
+  flex-direction: сolumn;
   justify-content: center;
   align-items: center;
   z-index: 1;
@@ -16,30 +16,30 @@
 .menu {
   height: 100%;
   width: 1440px;
+
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /*justify-content: center;*/
   align-items: center;
-  min-width: 820px;
+  min-width: 1440px;
   font-family: 'Roboto Mono', monospace;
-
-
 }
 
 .logo {
-  font-size: 36px;
-  letter-spacing: 55px;
-  font-weight: bold;
-  line-height: 50px;
-  margin: 73px;
-  font-family: 'Roboto Mono', monospace;
+  display: block;
+  width: 960px;
+  height: 50px;
+  background-image: url(../materials/logo.svg);
+  background-size: cover;
 }
 
 .gal, .ab {
+  display: block;
+  width: 240px;
+  height: 100%;
   font-size: 24px;
-  margin: 20px;
-  /*text-decoration: underline;*/
   cursor: pointer;
   font-family: 'Roboto Mono', monospace;
   line-height: 50px;
+  text-align: center;
 }
