--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -38,7 +38,6 @@ a {
 }
 
 body {
-  min-width: 820px;
   background-color: #FAFAFA;
 }
 
@@ -56,7 +55,8 @@ body {
 .bg {
   width: 480px;
   height: 700px;
-  /*margin-bottom: 80px;*/
+  min-width: 480px;
+  min-height: 700px;
   background-image: url(../materials/bg2.png);
   background-size: contain;
   background-repeat: no-repeat;
@@ -246,4 +246,20 @@ body {
 
 .tooriginal:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 375px) {
+  .main {
+    flex-direction: column;
+  }
+
+  .bg {
+    transform: scale(0.6);
+    top: 150px;
+  }
+
+  .figcaption {
+    margin-top: 10px;
+  }
+
 }
