--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -175,14 +175,14 @@ body {
 .figcaption>h1 {
   font-family: T-StarPro-Bold;
   font-size: 36px;
-  line-height: 37px;
+  line-height: 34px;
   text-indent: -16px;
 }
 
 .figcaption>h2 {
   font-family: T-StarPro;
   font-size: 14px;
-  line-height: 15px;
+  line-height: 17px;
   margin-top: 10px;
 }
 
@@ -191,6 +191,16 @@ body {
   font-size: 20px;
   line-height: 24px;
   margin-top: 20px;
+}
+
+.figcaption>a {
+  font-family: T-StarPro;
+  font-size: 12px;
+  line-height: 12px;
+  margin-top: 10px;
+  color: gray;
+  display: inline-block;
+  text-decoration: underline;
 }
 
 .bottons {
@@ -229,6 +239,7 @@ body {
 
 .random:active {
   background-color: lightgray;
+  transition: none;
 }
 
 .chaos.chaosON {
@@ -237,6 +248,8 @@ body {
 
 .tooriginal {
   width: 120px;
+  height: 40px;
+  line-height: 40px;
   font-size: 18px;
   text-align: center;
   cursor: pointer;
@@ -248,8 +261,20 @@ body {
   text-decoration: underline;
 }
 
+.original {
+  /*display: none;*/
+  opacity: 0;
+  transition: .2s ease-out; 
+}
+
 .mobile {
   display: none;
+}
+
+@media (min-width: 2000px) {
+  .main {
+    transform: scale(1.4);
+  }
 }
 
 @media (max-width: 375px) {
@@ -259,12 +284,13 @@ body {
 
   .bg {
     transform: scale(0.7);
-    top: 210px;
+    top: 220px;
   }
 
   .figcaption {
-    margin-top: 50px;
+    margin-top: 60px;
     margin-bottom: 20px;
+    width: 250px;
   }
 
   .figcaption>p {
@@ -282,6 +308,7 @@ body {
   .bottons {
     margin-bottom: 30px;
     justify-content: center;
+    width: 250px;;
   }
 
 }
