--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -53,11 +53,6 @@ body {
 }
 
 .bg {
-  width: 480px;
-  height: 700px;
-  min-width: 480px;
-  min-height: 700px;
-  background-image: url(../materials/bg2.png);
   background-size: contain;
   background-repeat: no-repeat;
   position: relative;
@@ -71,10 +66,6 @@ body {
 }
 
 .figures {
-  width: 388px;
-  height: 618px;
-  margin-left: 50px;
-  margin-top: 38px;
   position: relative;
   overflow: hidden;
 }
@@ -82,87 +73,7 @@ body {
 .rectangle {
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-.f1 {
-  background-image: url(../materials/1.png);
   position: absolute;
-  left: 104px;
-  top: 5px;
-  width: 205px;
-  height: 180px;
-  z-index: 13;
-}
-
-
-.f2 {
-  background-image: url(../materials/2.png);
-  position: absolute;
-  left: 82px;
-  top: 396px;
-  width: 72px;
-  height: 71px;
-  z-index: 12;
-}
-
-.f3 {
-  background-image: url(../materials/3.png);
-  position: absolute;
-  left: 123px;
-  top: 470px;
-  width: 70px;
-  height: 61px;
-  z-index: 11;
-}
-
-.f4 {
-  background-image: url(../materials/4.png);
-  position: absolute;
-  left: 176px;
-  top: 508px;
-  width: 43px;
-  height: 23px;
-  z-index: 10;
-}
-
-.f5 {
-  background-image: url(../materials/5.png);
-  position: absolute;
-  left: 206px;
-  top: 530px;
-  width: 59px;
-  height: 10px;
-  z-index: 9;
-}
-
-.f6 {
-  background-image: url(../materials/6.png);
-  position: absolute;
-  left: 59px;
-  top: 419px;
-  width: 253px;
-  height: 41px;
-  z-index: 8;
-}
-
-.f7 {
-  background-image: url(../materials/7.png);
-  position: absolute;
-  left: 177px;
-  top: 339px;
-  width: 84px;
-  height: 120px;
-  z-index: 7;
-}
-
-.f8 {
-  background-image: url(../materials/8.png);
-  position: absolute;
-  left: 216px;
-  top: 539px;
-  width: 21px;
-  height: 22px;
-  z-index: 6;
 }
 
 .figcaption {
@@ -170,6 +81,7 @@ body {
   width: 300px;
   height: 550px;
   display: block;
+  z-index: 999999;
 }
 
 .figcaption>h1 {
@@ -264,12 +176,33 @@ body {
 .original {
   /*display: none;*/
   opacity: 0;
-  transition: .2s ease-out; 
+  transition: .2s ease-out;
 }
 
 .mobile {
   display: none;
 }
+
+.navigation {
+  height: 100vh;
+  width: 100px;
+  background-color: lightgray;
+  position: absolute;
+  display: flex;
+  cursor: pointer;
+  z-index: 99999999;
+  opacity: .2;
+}
+
+.next {
+  right: 0;
+}
+
+.prvious {
+  left: 0;
+}
+
+
 
 @media (min-width: 2000px) {
   .main {
@@ -309,6 +242,10 @@ body {
     margin-bottom: 30px;
     justify-content: center;
     width: 250px;;
+  }
+
+  .navigation {
+    width: 20px;
   }
 
 }
