--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -81,7 +81,7 @@ body {
   width: 300px;
   height: 550px;
   display: block;
-  z-index: 999999;
+  z-index: 999;
 }
 
 .figcaption>h1 {
@@ -244,6 +244,19 @@ body {
     width: 250px;;
   }
 
+  .navigation {
+    width: 20px;
+  }
+
+}
+
+@media only screen
+and (min-device-width : 375px)
+and (max-device-width : 667px)
+and (orientation : landscape) {
+  .bg, .figcaption {
+    transform: scale(0.5);
+  }
   .navigation {
     width: 20px;
   }
