--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -20,9 +20,6 @@
   font-family: T-StarPro;
 }
 
-.body {
-  /*min-width: 1310px;*/
-}
 .globalflex {
   width: 100vw;
   display: flex;
@@ -37,21 +34,18 @@
   /*margin: auto;*/
   position: relative;
   height: 3000px;
-  /*box-shadow: 0 0 4px 1px #D4D4D4;*/
-  /*background-image: url(../materials/maket.png);*/
-  /*background-color: brown;*/
+  box-shadow: 0 0 4px 1px #D4D4D4;
 }
 
 .malevich {
-  height: 800px;
+  height: 1300px;
   position: relative;
-  margin-top: 50px;
 }
 
 .malevichBg {
   position: absolute;
   width: 1440px;
-  height: 800px;
+  height: 900px;
   -webkit-clip-path: polygon(0 0, 100% 55%, 100% 95%, 0% 100%);
   background-color: #FFD400;
 }
@@ -71,7 +65,7 @@
   width: 300px;
   height: 200px;
   margin-left: 658px;
-  margin-top: 60px;
+  margin-top: 76px;
   position: absolute;
   background-color: blue;
 }
@@ -80,41 +74,19 @@
   position: absolute;
   width: 560px;
   height: 675px;
-  background-image: url(../materials/malevich2.jpg);
+  background-image: url(../materials/malevich1.jpg);
   background-size: contain;
   background-repeat: no-repeat;
-  margin-top: 87px;
-  margin-left: 240px;
-  display: block;
+  margin-top: 136px;
+  margin-left: 317px;
 }
 
 .malevichCaption {
   position: absolute;
   width: 700px;
   height: 400px;
-  left: 730px;
+  left: 650px;
   margin-top: 550px;
-}
-
-.right {
-  width: 240px;
-  height: 800px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-}
-
-.left {
-  width: 240px;
-  height: 800px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  right: 0;
 }
 
 h1 {
@@ -123,134 +95,103 @@ h1 {
   position: absolute;
 }
 
-.malevich > h1 {
+.right {
+  width: 1300px;
+  height: 120px;
+  text-align: center;
+  margin-top: 400px;
+  line-height: 120px;
+  margin-left: -505px;
+  transform: rotate(-90deg);
   color: white;
 }
 
-.right > h1 {
-    transform: rotate(-90deg);
+.left {
+  width: 1300px;
+  height: 120px;
+  text-align: center;
+  margin-top: 400px;
+  line-height: 120px;
+  right: -505490px;
+  transform: rotate(90deg);
+  color: black;
 }
 
-.left > h1 {
-    transform: rotate(90deg);
-}
 
-.left > p {
-    width: 120px;
-    height: 200px;
-    font-family: T-StarPro-Medium;
-    font-size: 24px;
-    color: white;
-    line-height: 29px;
-}
-
-.malevich > .left {
-  justify-content: flex-end;
-}
 
 h2 {
-  font-size: 42px;
+  font-size: 48px;
   font-weight: 500;
   font-family: T-StarPro-Heavy;
 }
 
 .malevichCaption>p {
-  padding-top: 5px;
-  padding-left: 22px;
-  font-size: 32px;
+  padding-top: 20px;
+  padding-left: 29px;
+  font-size: 36px;
   font-weight: 400;
   font-family: T-StarPro-Medium;
-  line-height: 33px;
+  line-height: 30normal;
 }
 
 .chashnikCaption>p {
   padding-top: 20px;
-  padding-left: 22px;
+  padding-left: 29px;
   font-size: 36px;
   font-weight: 400;
   font-family: T-StarPro-Medium;
+  line-height: 30normal;
 }
 
 .gallery {
-  width: 1440px;
-  height: 350px;
-}
-.galleryPort {
   width: 900px;
-  height: 350px;
+  height: 400px;
   left: 270px;
-  /*background-color: green;*/
-  position: relative;
+  background-color: green;
+  position: absolute;
   bottom: 0;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .galleryRail {
-  height: 350px;
+  height: 400px;
   width: 2000px;
 }
 
 .galleryItem {
-  height: 310px;
-  width: 200px;
-  margin: 20px 50px;
-  /*background-color: lightgray;*/
+  height: 370px;
+  width: 270px;
+  margin: 15px;
+  background-color: lightgray;
   display: inline-block;
   content: '';
-  top: 0;
 }
 
-.galleryItem > img {
-  width: 200px;
-  top: 0;
+.galleryItem>div{
+  width: auto;
+  height: 270px;
+  background-color: gray;
+  color: white;
   display: block;
+  margin-bottom: 20px;
 }
 
-.galleryItem > h1 {
-  width: 200px;
-  height: 30px;
-  font-size: 24px;
+.galleryItem>h1{
+  width: auto;
+  font-size: 20px;
   display: inline-block;
   margin-left: 10px;
-  margin-top: 10px;
-  font-family: T-StarPro-Heavy;
-  position: relative;
 }
 
-.galleryItem > p {
-  width: 200px;
-  height: 30px;
+.galleryItem>p{
+  width: auto;
   font-size: 16px;
   display: inline-block;
-  margin-top: 5px;
+  margin-top: 30px;
   margin-left: 10px;
-  font-family: T-StarPro;
-}
-
-.galleryNav {
-  width: 1000px;
-  height: 50px;
-  margin: 150px 220px;
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.next, .previous {
-  height: 55px;
-  width: 68px;
-  background-size: contain;
-  background-image: url(../materials/arrow.svg);
-  background-repeat: no-repeat;
-}
-
-.next {
-  transform: rotate(180deg);
 }
 
 .chashnik {
-  /*top: 1300px;*/
   height: 1300px;
   position: relative;
 }
