переход по таймлайну

--- a/stylesheets/popova.css
+++ b/stylesheets/popova.css
@@ -60,3 +60,12 @@
     margin-top: 120px;
   }
 }
+
+#y1918c {
+  background-color: #000000;
+}
+
+#y1918s::before {
+  color: #000000;
+  text-decoration: underline;
+}
