--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -255,6 +255,10 @@ body {
 
 }
 
+.about {
+  width: 700px;
+}
+
 @media only screen
 and (min-device-width : 375px)
 and (max-device-width : 667px)
