--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -84,7 +84,7 @@ body {
   z-index: 999;
 }
 
-.figcaption>a,
+
 .figcaption>h1 {
   font-family: T-StarPro-Bold;
   font-size: 36px;
@@ -97,6 +97,15 @@ body {
   font-size: 14px;
   line-height: 17px;
   margin-top: 10px;
+}
+
+.figcaption>a {
+  font-family: T-StarPro;
+  font-size: 18px;
+  line-height: 24px;
+  margin-top: 24px;
+  display: inline-block;
+  text-decoration: underline;
 }
 
 .figcaption>p {
@@ -257,7 +266,7 @@ body {
 
 .about {
   width: 700px;
-  height: 240px;
+  height: 400px;
 }
 
 @media only screen
