сделал картины свг

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -80,7 +80,7 @@ body {
 
 .rectangle {
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   position: absolute;
 }
 
