--- a/stylesheets/malevich.css
+++ b/stylesheets/malevich.css
@@ -3,7 +3,7 @@
   height: 700px;
   min-width: 480px;
   min-height: 700px;
-  background-image: url(../materials/malevich-1/bg2.png);
+  /*background-image: url(../materials/malevich-1/bg2.png);*/
 }
 
 .figures {
@@ -11,10 +11,12 @@
   height: 618px;
   margin-left: 50px;
   margin-top: 38px;
+  background-image: url(../materials/malevich-1/0.svg);
+  box-shadow: 0 5px 15px -5px #636363;
 }
 
 .f1 {
-  background-image: url(../materials/malevich-1/1.png);
+  background-image: url(../materials/malevich-1/1.svg);
   left: 104px;
   top: 5px;
   width: 205px;
@@ -26,7 +28,7 @@
 
 
 .f2 {
-  background-image: url(../materials/malevich-1/2.png);
+  background-image: url(../materials/malevich-1/2.svg);
   left: 82px;
   top: 396px;
   width: 72px;
@@ -35,7 +37,7 @@
 }
 
 .f3 {
-  background-image: url(../materials/malevich-1/3.png);
+  background-image: url(../materials/malevich-1/3.svg);
   left: 123px;
   top: 470px;
   width: 70px;
@@ -44,7 +46,7 @@
 }
 
 .f4 {
-  background-image: url(../materials/malevich-1/4.png);
+  background-image: url(../materials/malevich-1/4.svg);
   left: 176px;
   top: 508px;
   width: 43px;
@@ -53,7 +55,7 @@
 }
 
 .f5 {
-  background-image: url(../materials/malevich-1/5.png);
+  background-image: url(../materials/malevich-1/5.svg);
   left: 206px;
   top: 530px;
   width: 59px;
@@ -62,7 +64,7 @@
 }
 
 .f6 {
-  background-image: url(../materials/malevich-1/6.png);
+  background-image: url(../materials/malevich-1/6.svg);
   left: 59px;
   top: 419px;
   width: 253px;
@@ -71,7 +73,7 @@
 }
 
 .f7 {
-  background-image: url(../materials/malevich-1/7.png);
+  background-image: url(../materials/malevich-1/7.svg);
   left: 177px;
   top: 339px;
   width: 84px;
@@ -80,7 +82,7 @@
 }
 
 .f8 {
-  background-image: url(../materials/malevich-1/8.png);
+  background-image: url(../materials/malevich-1/8.svg);
   left: 216px;
   top: 539px;
   width: 21px;
