--- a/stylesheets/popova.css
+++ b/stylesheets/popova.css
@@ -3,7 +3,7 @@
   height: 594px;
   min-width: 465px;
   min-height: 594px;
-  background-image: url(../materials/popova-1/bg.png);
+  /*background-image: url(../materials/popova-1/bg.png);*/
   margin-right: 60px;
 }
 
@@ -12,10 +12,12 @@
   height: 587px;
   margin-left: 6px;
   margin-top: 3px;
+  background-image: url(../materials/popova-1/0.svg);
+  box-shadow: 0 5px 15px -5px #636363;
 }
 
 .f1 {
-  background-image: url(../materials/popova-1/1.png);
+  background-image: url(../materials/popova-1/1.svg);
   left: 269px;
   top: 131px;
   width: 128px;
@@ -25,7 +27,7 @@
 
 
 .f2 {
-  background-image: url(../materials/popova-1/2.png);
+  background-image: url(../materials/popova-1/2.svg);
   left: 143px;
   top: 90px;
   width: 249px;
@@ -34,7 +36,7 @@
 }
 
 .f3 {
-  background-image: url(../materials/popova-1/3.png);
+  background-image: url(../materials/popova-1/3.svg);
   left: 64px;
   top: 56px;
   width: 192px;
@@ -43,7 +45,7 @@
 }
 
 .f4 {
-  background-image: url(../materials/popova-1/4.png);
+  background-image: url(../materials/popova-1/4.svg);
   left: 26px;
   top: 178px;
   width: 82px;
