--- a/stylesheets/timeline.css
+++ b/stylesheets/timeline.css
@@ -132,7 +132,7 @@
 #y1913s:hover:after {background-image: url(../materials/malevich2.jpg);}
 #y1915s:hover:after {background-image: url(../materials/malevich1.jpg);}
 #y1918s:hover:after {background-image: url(../materials/popova.png);}
-#y1924s:hover:after {background-image: url(../materials/malevich4.jpg);}
+#y1924s:hover:after {background-image: url(../materials/lisitskiy.png);}
 #y1926s:hover:after {background-image: url(../materials/malevich2.jpg);}
 #y1927s:hover:after {background-image: url(../materials/malevich4.jpg);}
 #y1929s:hover:after {background-image: url(../materials/malevich3.jpg);}
