--- a/stylesheets/timeline.css
+++ b/stylesheets/timeline.css
@@ -129,14 +129,14 @@
 
 #y1910s:hover:after {background-image: url(../materials/malevich4.jpg);}
 #y1911s:hover:after {background-image: url(../materials/malevich3.jpg);}
-#y1913s:hover:after {background-image: url(../materials/malevich2.jpg);}
+#y1913s:hover:after {background-image: url(../materials/malevich5.png);}
 #y1914s:hover:after {background-image: url(../materials/malevich2.jpg);}
 #y1915s:hover:after {background-image: url(../materials/malevich1.jpg);}
 #y1918s:hover:after {background-image: url(../materials/popova.png);}
 #y1924s:hover:after {background-image: url(../materials/lisitskiy.png);}
-#y1926s:hover:after {background-image: url(../materials/malevich2.jpg);}
-#y1927s:hover:after {background-image: url(../materials/malevich4.jpg);}
-#y1929s:hover:after {background-image: url(../materials/malevich3.jpg);}
+#y1926s:hover:after {background-image: url(../materials/chashnik2.png);}
+#y1927s:hover:after {background-image: url(../materials/chashnik1.jpg);}
+#y1929s:hover:after {background-image: url(../materials/klun.png);}
 
 #abouts:before {content: 'О ПРОЕКТЕ'; font-family: T-StarPro-Bold;}
 #y1910s:before {content: '1910';}
