--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -8,28 +8,19 @@
   font-family: T-StarPro-Heavy;
 }
 
-
 @font-face {
   src: url(../fonts/T-StarPro-Medium.otf);
   font-family: T-StarPro-Medium;
 }
-
 
 @font-face {
   src: url(../fonts/T-StarPro.otf);
   font-family: T-StarPro;
 }
 
-/*@media screen and (max-width: 1440px) {
-  .bg {
-    transform: scale(0.62);
-    margin-bottom: 40px;
-  }
-}*/
-
 * {
   box-sizing:border-box;
-  transition: .5s;
+  /*transition: .5s;*/
 }
 
 a {
@@ -39,253 +30,110 @@ a {
 
 body {
   background-color: #FAFAFA;
+  height: 4000px;
 }
 
-.main {
+.s1 {
   position: absolute;
   width: 100vw;
   height: 100vh;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.mainabout {
-  background-image: url(../materials/about.svg);
-  background-size: 100% 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.bg {
-  background-size: contain;
-  background-repeat: no-repeat;
-  position: relative;
-  display: block;
-}
-
-
-.ddd {
-  width: 100%;
-  height: 100%;
-}
-
-.figures {
-  position: relative;
-  overflow: hidden;
-}
-
-.rectangle {
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: absolute;
-}
-
-.figcaption {
-  /*position: absolute;*/
-  width: 300px;
-  height: 550px;
-  display: block;
-  z-index: 999;
-}
-
-
-.figcaption>h1 {
-  font-family: T-StarPro-Bold;
-  font-size: 36px;
-  line-height: 34px;
-  text-indent: -16px;
-}
-
-.figcaption>h2 {
-  font-family: T-StarPro;
-  font-size: 14px;
-  line-height: 17px;
-  margin-top: 10px;
-}
-
-.figcaption>a {
-  font-family: T-StarPro;
-  font-size: 18px;
-  line-height: 24px;
-  margin-top: 24px;
-  display: inline-block;
-  text-decoration: underline;
-}
-
-.figcaption>p {
-  font-family: T-StarPro;
-  font-size: 20px;
-  line-height: 24px;
-  margin-top: 20px;
-}
-
-/*.figcaption>a {
-  font-family: T-StarPro;
-  font-size: 12px;
-  line-height: 12px;
-  margin-top: 10px;
-  color: gray;
-  display: inline-block;
-  text-decoration: underline;
-}*/
-
-.bottons {
-  width: 300px;
-  height: 60px;
-  margin-top: 35px;
-
-  /*background-color: blue;*/
-
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.random {
-  width: 120px;
-  height: 40px;
-
-  line-height: 43px;
-  font-size: 20px;
-  text-align: center;
-  font-family: T-StarPro-Bold;
-
-  border-style: solid;
-  border-width: 1px;
-  border-color: black;
-
-  cursor: pointer;
-  z-index: 1;
-}
-
-.random:hover {
-  /*text-decoration: underline;*/
-}
-
-.random:active {
   background-color: lightgray;
-  transition: none;
 }
 
-.chaos.chaosON {
-  background-color: rgba(255, 0, 0, 0.5);
+.s1>.text {
+  margin: auto;
+  margin-top: calc(50vh - 85px);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 900px;
+  height: 170px;
 }
 
-.tooriginal {
-  width: 120px;
-  height: 40px;
-  line-height: 40px;
-  font-size: 18px;
-  text-align: center;
-  cursor: pointer;
-  font-family: T-StarPro-Bold;
-  margin-left: 20px;
-}
-
-.tooriginal:hover {
-  text-decoration: underline;
-}
-
-.original {
-  /*display: none;*/
-  opacity: 0;
-  transition: .2s ease-out;
-}
-
-.mobile {
+.arrow {
+  position: absolute;
+  width: 100vw;
+  height: 50px;
+  top: calc(100vh - 80px);
+  background-image: url(../materials/arrow2.svg);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 9;
   display: none;
 }
 
-.navigation {
-  height: 100vh;
-  width: 100px;
-  background-color: lightgray;
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+.bounce {
+  animation: bounce 2s infinite ease;
+}
+
+.s2 {
   position: absolute;
+  top: calc(100vh + 1000px);
+  width: 100vw;
+  height: 200px;
   display: flex;
-  cursor: pointer;
-  z-index: 99999999;
-  opacity: .2;
+  align-items: center;
+  flex-direction: column;
 }
 
-.next {
-  right: 0;
+.s2 > div {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 1200px;
+  height: 170px;
 }
 
-.prvious {
-  left: 0;
+.s2text {
+  width: 400px;
+  /*margin: 0 100px;*/
 }
 
-
-
-@media (min-width: 2000px) {
-  .main {
-    transform: scale(1.4);
-  }
+.redslash {
+  width: 20px;
+  height: 500px;
+  transform: rotate(20deg);
+  background-color: #B61004;
 }
 
-@media (max-width: 375px) {
-  .main {
-    flex-direction: column;
-  }
-
-  .bg {
-    transform: scale(0.7);
-    top: 220px;
-  }
-
-  .figcaption {
-    margin-top: 60px;
-    margin-bottom: 20px;
-    width: 250px;
-  }
-
-  .figcaption>p {
-    margin-bottom: 50px;
-  }
-
-  .mobile {
-    display: block;
-  }
-
-  .nomobile {
-    display: none;
-  }
-
-  .bottons {
-    margin-bottom: 30px;
-    justify-content: center;
-    width: 250px;;
-  }
-
-  .navigation {
-    width: 20px;
-  }
-
-  .timelineflex {
-    display: none;
-  }
-
+h1 {
+  font-size: 180px;
+  font-family:  T-StarPro-Bold;
+  display: none;
 }
 
-.about {
-  width: 700px;
-  height: 400px;
+h2 {
+  font-size: 32px;
+  font-family:  T-StarPro-Medium;
+  display: none;
 }
 
-@media only screen
-and (min-device-width : 375px)
-and (max-device-width : 667px)
-and (orientation : landscape) {
-  .bg, .figcaption {
-    transform: scale(0.5);
-  }
-  .navigation {
-    width: 20px;
-  }
+h3 {
+  font-size: 48px;
+  font-family:  T-StarPro-Bold;
+}
 
+p {
+  font-size: 24px;
+  font-family:  T-StarPro;
+  line-height: 29px;
+  margin-top: 10px;
+}
+
+.none {
+  display: none;
 }
